--- a/Buttonn/star/index.scss
+++ b/Buttonn/star/index.scss
@@ -1,4 +1,6 @@
-.start {
+@import " ../..assets/scss/colorvariable";
+
+.star {
     position: relative;
     min-widht: 200x;
     display: inline-flex;
